--- a/.env
+++ b/.env
@@ -27,3 +27,10 @@ APP_SECRET=1ba1f7c7286c8ae2e011902182752475
 # IMPORTANT: You MUST configure your db driver and server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root@127.0.0.1:3306/altaytour
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
