--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-intl": "*",
         "fzaninotto/faker": "^1.9",
         "liip/imagine-bundle": "dev-master",
         "sensio/framework-extra-bundle": "^5.5",
@@ -12,9 +13,11 @@
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
+        "symfony/filesystem": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/intl": "4.3.*",
         "symfony/maker-bundle": "^1.14",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "4.3.*",
