--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -2,6 +2,7 @@ vich_uploader:
     db_driver: orm
 
     mappings:
-        products:
+        upload_images:
             uri_prefix: '%app.path.upload_images%'
             upload_destination: '%kernel.project_dir%/public%app.path.upload_images%'
+            namer: vich_uploader.namer_uniqid
