--- a/config/services.yaml
+++ b/config/services.yaml
@@ -28,3 +28,6 @@ services:
     App\Service\FileUploader:
         arguments:
             $targetDirectory: '%kernel.project_dir%/public/uploads'
+    App\Service\Mailer:
+        arguments:
+            $siteEmail: 'example@yandex.ru'
